fixed overflow bug with top margin of body

--- a/less/style.less
+++ b/less/style.less
@@ -32,9 +32,11 @@ html {
 	font-family: @basefont;
 	font-size: @basefontsize;
 	line-height: @baselineheight;
+	margin:0;
+	padding:0;
 }
 
-body {height:auto; margin:0;padding:0;}
+body {margin:0;padding:0;}
 a {
 	text-decoration: none;
 	border-bottom: 1.5px solid #dadada;
@@ -86,24 +88,29 @@ ol {
 //Layout
 #content {
 	position: relative;
-	margin-left: 250px;
+	z-index: 1;
 	border-left: 1px solid @light-grey;
+	margin-left: 250px;
+	overflow: auto;
 	
 }
 
 article {margin: 0 2%;}
 #sidebar {
 	position: fixed;
-	float: left;
+	top:0
+	bottom:0;
+	left:0;
 	width: 250px;
 	height: 100%;
 	display: block;
+	z-index: 0;
 
 }
 
 #sidebar {
 	ul {
-		margin:10% 2em;
+		margin:2em;
 		font: bold 1em/1.5 @basefont;
 		color: @altColor;
 		text-align: right;
